se agrega Dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ server.port=8080
 
 
 # OPEN API
+# https://clasefake.onrender.com/swagger-ui/index.html  Así lo llaman en Render
 # http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
