--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+
+	manifest {
+
+		attributes 'BuensaborApplication': 'com.tup.buensabor.BuensaborApplication' // Reemplaza 'tu.paquete.MainClass' con la clase principal de tu aplicación
+
+	}
+
+}
